--- a/src/app/pages/platos/plato/form/plato-form.component.html
+++ b/src/app/pages/platos/plato/form/plato-form.component.html
@@ -9,7 +9,7 @@
             <app-select label="Grupo" [formGroup]="form" controlName="grupoPlatoId" [items]="grupos" [soft]="true"
                 [errors]="{ required: 'Selecciona un grupo.' }"></app-select>
 
-            <app-input label="Precio" type="number" [formGroup]="form" controlName="precioBase"
+            <app-input label="Precio" type="numeric" [formGroup]="form" controlName="precioBase"
                 [soft]="true"></app-input>
 
             <app-select label="Estado" [formGroup]="form" controlName="estado"
@@ -18,7 +18,7 @@
             <app-select label="¿Es Promoción?" [formGroup]="form" controlName="enPromocion"
                 [items]="[{label:'Sí', value:'S'}, {label:'No', value:'N'}]" [soft]="true"></app-select>
 
-            <app-input label="Descuento" type="number" [formGroup]="form" controlName="descuentoPct"
+            <app-input label="Descuento" type="numeric" [formGroup]="form" controlName="descuentoPct"
                 [soft]="true"></app-input>
 
         </div>
